--- a/webgl&projection_mapping.html
+++ b/webgl&projection_mapping.html
@@ -19,6 +19,9 @@
     }
   </style>
   <canvas></canvas>
+  <a href="//github.com/dwqdaiwenqi/simple-three.js" target="_blank" style="position:absolute;right:0;top:0;z-index:3;" >
+    <img src="//alloyteam.github.io/github.png" alt=""/>
+  </a>
   <div id="ui">
       <!-- -49.5, 0, 77.5 -->
     <p>camX:<input id="" type="range" min="-500" max="500" value="-114" step=".5"></p>
